gate-logs/extras/prior-teed-logs/07-b1-exp2.log
   Compiling liminal-server v0.3.2 (/Users/annabel/Developer/ablative/stack/liminal/.worktrees/teardown-fix/crates/liminal-server)
error[E0425]: cannot find value `e1_seq` in this scope
   --> crates/liminal-server/src/server/participant/production/tests_w1b_while_dead_replay.rs:153:24
    |
153 |         acked_through: e1_seq,
    |                        ^^^^^^
    |
help: a local variable with a similar name exists
    |
153 -         acked_through: e1_seq,
153 +         acked_through: e2_seq,
    |

warning: unused import: `ParticipantAck`
  --> crates/liminal-server/src/server/participant/production/tests_w1b_while_dead_replay.rs:26:53
   |
26 |     EnrollmentRequest, EnrollmentToken, Generation, ParticipantAck, RecordAdmission,
   |                                                     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `liminal-server` (lib test) generated 1 warning
error: could not compile `liminal-server` (lib test) due to 1 previous error; 1 warning emitted
